# libsbml-rs

./: .cursorignore  .gitignore  .gitmodules  Cargo.toml  LICENSE.md  LICENSE.txt  README.md  build.rs  clippy_output.txt
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: format.yml  lint.yml  publish.yml  test-build.yml  test-publish.yml
cmake/libcombine_wrapper/: CMakeLists.txt
examples/: create.rs
src/: annotation.hpp  annotation.rs  cast.rs  combine.rs  compartment.rs  errors.rs  kineticlaw.rs  lib.rs  localparameter.rs  macros.rs  main.rs  model.rs  modref.rs  namespaces.rs  packages.rs  parameter.rs  plugin.rs  property.rs  reaction.rs  reader.rs  rule.rs  sbmldoc.rs  sbmlerror.rs  species.rs  speciesref.rs  unit.rs  unitdef.rs  utils.hpp  wrapper.rs
src/collections/: compartments.rs  parameters.rs  reactions.rs  rules.rs  species.rs  unitdefs.rs
src/combine/: combinearchive.rs  error.rs  manifest.rs
src/fbc/: fluxbound.rs  fluxboundop.rs  fluxobjective.rs  objective.rs  objectivetype.rs
src/reader/: reader.rs
src/traits/: annotation.rs  fromptr.rs  inner.rs  intoid.rs  sbase.rs
tests/: e2e.rs
tests/data/: example.xml  expected_omex_content.xml  odes_example_test.xml
