[package]
name = "sbml"
version = "0.1.0"
edition = "2021"

[dependencies]
autocxx = "0.28.0"
cxx = "1.0.140"
paste = "1.0.15"
quick-xml = { version = "0.37.2", features = ["serialize"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.12"


[build-dependencies]
autocxx-build = "0.28.0"
cmake = "0.1.54"
miette = { version = "5", features = ["fancy"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.clippy]
needless-lifetimes = "allow"
macro-metavars-in-unsafe = "allow"
