[package]
name = "libsbml"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/enzymeml/libsbml"

[lib]
name = "libsbml"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
autocxx = "0.28.0"
cxx = "1.0.140"
paste = "1.0.15"
quick-xml = { version = "0.37.2", features = ["serialize"] }
serde = { version = "1.0.217", features = ["derive"] }

[build-dependencies]
autocxx-build = "0.28.0"
cmake = "0.1.54"
miette = { version = "5", features = ["fancy"] }
vcpkg = "0.2.15"

[dev-dependencies]
insta = "1.43.1"
pretty_assertions = "1.4.1"

[lints.clippy]
needless-lifetimes = "allow"
macro-metavars-in-unsafe = "allow"
too-many-arguments = "allow"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "ce613c41372b23b1f51333815feb3edd87ef8a8b"
dependencies = ["libsbml[core,expat,zlib]"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { dependencies = [
    "libsbml[core,expat,zlib]",
], triplet = "x64-windows-static-md" }
